--- a/difftest/Difftest Results.ipynb
+++ b/difftest/Difftest Results.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'mysql://cc1:3306/project_b'"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "      <td>193477</td>\n",
        "      <td>60173</td>\n",
        "      <td>57240</td>\n",
-       "      <td>40794</td>\n",
+       "      <td>40874</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -114,10 +114,10 @@
        "#. Programs         3385  \n",
        "#. Testbeds            6  \n",
        "#. Params              4  \n",
-       "#. Results         40794  "
+       "#. Results         40874  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Ubuntu 16.04 64bit</td>\n",
-       "      <td>Intel E5-2620</td>\n",
+       "      <td>Intel E5-2620 v4</td>\n",
        "      <td>1.2.0.25</td>\n",
        "      <td>2.0</td>\n",
        "      <td>CPU</td>\n",
@@ -266,7 +266,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>882</td>\n",
+       "      <td>1442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -291,7 +291,7 @@
        "12  Ubuntu 16.04 64bit                             Intel E5-2620 (pocl)   \n",
        "3   Ubuntu 16.04 64bit                                  NVIDIA GTX 1080   \n",
        "13  Ubuntu 16.04 64bit                             Intel HD Haswell GT2   \n",
-       "9   Ubuntu 16.04 64bit                                    Intel E5-2620   \n",
+       "9   Ubuntu 16.04 64bit                                 Intel E5-2620 v4   \n",
        "10  Ubuntu 16.04 64bit                                    Intel i5-4570   \n",
        "14    CentOS 7.1 64bit        Intel(R) Xeon(R) CPU E5-2650 v2 @ 2.60GHz   \n",
        "11  Ubuntu 16.04 64bit                               Oclgrind Simulator   \n",
@@ -311,11 +311,11 @@
        "13         0                    66780               0  \n",
        "9      94780                    66780           83503  \n",
        "10     42091                    66780           18060  \n",
-       "14         0                        0             882  \n",
+       "14         0                        0            1442  \n",
        "11     94780                    66780           74256  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "7     16.10    1.2           Ubuntu 16.04 64bit    Emulator  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,33 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Intel(R) HD Graphics Haswell GT2 Desktop'),\n",
-       " ('      Intel(R) Xeon(R) CPU E5-2650 v2 @ 2.60GHz'),\n",
-       " ('Intel(R) Core(TM) i5-4570 CPU @ 3.20GHz'),\n",
-       " ('Intel(R) Xeon(R) CPU E5-2620 v4 @ 2.10GHz'),\n",
-       " ('GeForce GTX 1080'),\n",
-       " ('Oclgrind Simulator'),\n",
-       " ('pthread-Intel(R) Xeon(R) CPU E5-2620 v4 @ 2.10GHz')]"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "session.query(Testbed.device).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -523,17 +497,17 @@
      "output_type": "stream",
      "text": [
       "Current branch master is up to date.\n",
-      "[master 09554e1] auto: build/tab/megatable.tex\n",
-      " 1 file changed, 5 insertions(+), 3 deletions(-)\n",
+      "[master 08328e4] auto: build/tab/megatable.tex\n",
+      " 1 file changed, 2 insertions(+), 2 deletions(-)\n",
       "Counting objects: 5, done.\n",
       "Delta compression using up to 16 threads.\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 491 bytes | 0 bytes/s, done.\n",
+      "Writing objects: 100% (5/5), 445 bytes | 0 bytes/s, done.\n",
       "Total 5 (delta 3), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (3/3)\u001b[K\u001b[K\n",
       "remote: Updating references: 100% (1/1)\u001b[K\u001b[K\n",
       "To https://git.overleaf.com/8608915dsywxshwwjmw\n",
-      "   2bb1542..09554e1  master -> master\n"
+      "   09554e1..08328e4  master -> master\n"
      ]
     }
    ],
