--- a/difftest/coSegfaults.ipynb
+++ b/difftest/coSegfaults.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compile-only Results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +18,7 @@
        "'mysql://cc1:3306/project_b'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import cldrive\n",
@@ -113,27 +122,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Segfaults:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "outbox/coCLgenResults/segfaults/bug-report-intel-1202.c\n",
-      "outbox/coCLgenResults/segfaults/bug-report-intel-1394.c\n",
-      "outbox/coCLgenResults/segfaults/bug-report-intel-3152.c\n",
-      "outbox/coCLgenResults/segfaults/bug-report-intel-7606.c\n",
-      "outbox/coCLgenResults/segfaults/bug-report-nvidia-7756.c\n",
-      "outbox/coCLgenResults/segfaults/bug-report-intel-9675.c\n",
-      "outbox/coCLgenResults/segfaults/bug-report-nvidia-21742.c\n",
-      "outbox/coCLgenResults/segfaults/bug-report-intel-43601.c\n",
-      "outbox/coCLgenResults/segfaults/bug-report-intel-43729.c\n",
-      "outbox/coCLgenResults/segfaults/bug-report-intel-46257.c\n",
-      "outbox/coCLgenResults/segfaults/bug-report-intel-51271.c\n",
       "done\n",
-      "11 duplicates ignored\n"
+      "0 duplicates flagged\n"
      ]
     }
    ],
@@ -143,7 +148,7 @@
     "\n",
     "outbox = fs.path(\"outbox\", \"coCLgenResults\", \"segfaults\")\n",
     "fs.mkdir(outbox)\n",
-    "with Session(commit=False) as s:\n",
+    "with Session(commit=True) as s:\n",
     "    q = s.query(TABLE)\\\n",
     "        .filter(TABLE.status == 139,\n",
     "                sql.or_(TABLE.submitted == None, TABLE.submitted == 0),\n",
@@ -160,7 +165,7 @@
     "            result.dupe = 1\n",
     "            continue\n",
     "        errs.add(key)\n",
-    "                \n",
+    "\n",
     "        vendor = PLATFORMS_2_VENDORS[result.testbed.platform]\n",
     "        outpath = fs.path(outbox, f\"bug-report-{vendor}-{result.id}.c\")            \n",
     "\n",
@@ -174,7 +179,33 @@
     "        result.submitted = 1\n",
     "        print(outpath)\n",
     "print(\"done\")\n",
-    "print(f\"{dupes} duplicates ignored\")"
+    "print(f\"{dupes} duplicates flagged\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Session(commit=True) as s:\n",
+    "    q = s.query(TABLE)\\\n",
+    "        .filter(TABLE.classification == \"Build failure\",\n",
+    "                sql.or_(TABLE.submitted == None, TABLE.submitted == 0),\n",
+    "                sql.or_(TABLE.dupe == None, TABLE.dupe == 0))\\\n",
+    "        .order_by(TABLE.id)\n",
+    "\n",
+    "    print(q.count())\n",
+    "    for result in q:\n",
+    "        print(result.stderr, '\\n')"
    ]
   },
   {
