--- a/sec/overview.tex
+++ b/sec/overview.tex
@@ -1,3 +1,7 @@
 \section{Overview of Our Approach and Results}\label{sec:overview}
 
 We conducted testing using X different OpenCL configurations, summarized in Table~\ref{tab:platforms}. A \emph{configuration} refers to an OpenCL device and driver pair.
+
+\input{tab/platforms}
+
+CLsmith used 21 configurations, covering a range of Xeon Phi. Csmith also used older revisions of compilers, which allowed them to show the decreasing number of bugs in compiler releases. We should do this.
