--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -2,6 +2,10 @@
 
 Figure~\ref{fig:difftest} shows the differential testing methodology.
 
+% Reference: UB in C https://blog.regehr.org/archives/1520
+% Reference: C99 spec appendix J2 - list of UBs
+% OpenCL un-undefines some of those behaviours (e.g. it provides conversion functions between data types), but also adds to them.
+
 We make the following contributions:
 %
 \begin{itemize}
