--- a/difftest/Difftest Results.ipynb
+++ b/difftest/Difftest Results.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'mysql://cc1:3306/project_b'"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -96,8 +96,8 @@
        "      <td>200020</td>\n",
        "      <td>193477</td>\n",
        "      <td>60173</td>\n",
-       "      <td>57240</td>\n",
-       "      <td>40874</td>\n",
+       "      <td>66780</td>\n",
+       "      <td>48329</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -106,18 +106,18 @@
       "text/plain": [
        "             CLSmith  CLSmith w. cldrive  GitHub  CLgen  CLgen w. cl_launcher  \\\n",
        "#. Programs    10001               10001    9238   3385                  2385   \n",
-       "#. Testbeds        6                   5       5      5                     6   \n",
+       "#. Testbeds        6                   5       5      5                     7   \n",
        "#. Params          4                   4       4      4                     4   \n",
-       "#. Results    201057              200020  193477  60173                 57240   \n",
+       "#. Results    201057              200020  193477  60173                 66780   \n",
        "\n",
        "             CLgen w. co  \n",
        "#. Programs         3385  \n",
        "#. Testbeds            6  \n",
        "#. Params              4  \n",
-       "#. Results         40874  "
+       "#. Results         48329  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -265,8 +265,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1442</td>\n",
+       "      <td>66780</td>\n",
+       "      <td>53627</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -311,11 +311,11 @@
        "13         0                    66780               0  \n",
        "9      94780                    66780           83503  \n",
        "10     42091                    66780           18060  \n",
-       "14         0                        0            1442  \n",
+       "14         0                    66780           53627  \n",
        "11     94780                    66780           74256  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -360,8 +360,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Platform</th>\n",
+       "      <th>#.</th>\n",
        "      <th>Device</th>\n",
+       "      <th>Platform</th>\n",
        "      <th>Driver</th>\n",
        "      <th>OpenCL</th>\n",
        "      <th>Operating system</th>\n",
@@ -370,63 +371,70 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NVIDIA CUDA</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>GeForce GTX 1080</td>\n",
+       "      <td>NVIDIA CUDA</td>\n",
        "      <td>375.39</td>\n",
        "      <td>1.2</td>\n",
        "      <td>Ubuntu 16.04 64bit</td>\n",
        "      <td>GPU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Intel Gen OCL Driver</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>Intel(R) HD Graphics Haswell GT2 Desktop</td>\n",
+       "      <td>Intel Gen OCL Driver</td>\n",
        "      <td>1.3</td>\n",
        "      <td>1.2</td>\n",
        "      <td>Ubuntu 16.04 64bit</td>\n",
        "      <td>GPU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Intel OpenCL</td>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>Intel(R) Xeon(R) CPU E5-2620 v4 @ 2.10GHz</td>\n",
+       "      <td>Intel OpenCL</td>\n",
        "      <td>1.2.0.25</td>\n",
        "      <td>2.0</td>\n",
        "      <td>Ubuntu 16.04 64bit</td>\n",
        "      <td>CPU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Intel OpenCL</td>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>Intel(R) Xeon(R) CPU E5-2650 v2 @ 2.60GHz</td>\n",
+       "      <td>Intel OpenCL</td>\n",
        "      <td>1.2.0.44</td>\n",
        "      <td>1.2</td>\n",
-       "      <td>CentOS Linux 7.1.1503 64bit</td>\n",
+       "      <td>CentOS 7.1 64bit</td>\n",
        "      <td>CPU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Intel OpenCL</td>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>Intel(R) Core(TM) i5-4570 CPU @ 3.20GHz</td>\n",
+       "      <td>Intel OpenCL</td>\n",
        "      <td>1.2.0.25</td>\n",
        "      <td>1.2</td>\n",
        "      <td>Ubuntu 16.04 64bit</td>\n",
        "      <td>CPU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>POCL</td>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
        "      <td>pthread-Intel(R) Xeon(R) CPU E5-2620 v4 @ 2.10GHz</td>\n",
+       "      <td>POCL</td>\n",
        "      <td>0.14</td>\n",
        "      <td>2.0</td>\n",
        "      <td>Ubuntu 16.04 64bit</td>\n",
        "      <td>CPU</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Oclgrind</td>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
        "      <td>Oclgrind Simulator</td>\n",
+       "      <td>Oclgrind</td>\n",
        "      <td>16.10</td>\n",
        "      <td>1.2</td>\n",
        "      <td>Ubuntu 16.04 64bit</td>\n",
@@ -437,26 +445,26 @@
        "</div>"
       ],
       "text/plain": [
-       "               Platform                                             Device  \\\n",
-       "1           NVIDIA CUDA                                   GeForce GTX 1080   \n",
-       "2  Intel Gen OCL Driver           Intel(R) HD Graphics Haswell GT2 Desktop   \n",
-       "3          Intel OpenCL          Intel(R) Xeon(R) CPU E5-2620 v4 @ 2.10GHz   \n",
-       "4          Intel OpenCL          Intel(R) Xeon(R) CPU E5-2650 v2 @ 2.60GHz   \n",
-       "5          Intel OpenCL            Intel(R) Core(TM) i5-4570 CPU @ 3.20GHz   \n",
-       "6                  POCL  pthread-Intel(R) Xeon(R) CPU E5-2620 v4 @ 2.10GHz   \n",
-       "7              Oclgrind                                 Oclgrind Simulator   \n",
+       "   #.                                             Device  \\\n",
+       "0   1                                   GeForce GTX 1080   \n",
+       "1   2           Intel(R) HD Graphics Haswell GT2 Desktop   \n",
+       "2   3          Intel(R) Xeon(R) CPU E5-2620 v4 @ 2.10GHz   \n",
+       "3   4          Intel(R) Xeon(R) CPU E5-2650 v2 @ 2.60GHz   \n",
+       "4   5            Intel(R) Core(TM) i5-4570 CPU @ 3.20GHz   \n",
+       "5   6  pthread-Intel(R) Xeon(R) CPU E5-2620 v4 @ 2.10GHz   \n",
+       "6   7                                 Oclgrind Simulator   \n",
        "\n",
-       "     Driver OpenCL             Operating system Device type  \n",
-       "1    375.39    1.2           Ubuntu 16.04 64bit         GPU  \n",
-       "2       1.3    1.2           Ubuntu 16.04 64bit         GPU  \n",
-       "3  1.2.0.25    2.0           Ubuntu 16.04 64bit         CPU  \n",
-       "4  1.2.0.44    1.2  CentOS Linux 7.1.1503 64bit         CPU  \n",
-       "5  1.2.0.25    1.2           Ubuntu 16.04 64bit         CPU  \n",
-       "6      0.14    2.0           Ubuntu 16.04 64bit         CPU  \n",
-       "7     16.10    1.2           Ubuntu 16.04 64bit    Emulator  "
+       "               Platform    Driver OpenCL    Operating system Device type  \n",
+       "0           NVIDIA CUDA    375.39    1.2  Ubuntu 16.04 64bit         GPU  \n",
+       "1  Intel Gen OCL Driver       1.3    1.2  Ubuntu 16.04 64bit         GPU  \n",
+       "2          Intel OpenCL  1.2.0.25    2.0  Ubuntu 16.04 64bit         CPU  \n",
+       "3          Intel OpenCL  1.2.0.44    1.2    CentOS 7.1 64bit         CPU  \n",
+       "4          Intel OpenCL  1.2.0.25    1.2  Ubuntu 16.04 64bit         CPU  \n",
+       "5                  POCL      0.14    2.0  Ubuntu 16.04 64bit         CPU  \n",
+       "6              Oclgrind     16.10    1.2  Ubuntu 16.04 64bit    Emulator  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,28 +476,28 @@
     "import os\n",
     "from collections import OrderedDict\n",
     "\n",
-    "def get_testbed_info(testbed_id):\n",
+    "def get_testbed_info(config_id, testbed_id):\n",
     "    testbed = session.query(Testbed).filter(Testbed.id == testbed_id).first()\n",
     "    d = OrderedDict()\n",
-    "    d[\"Platform\"] = platform_str(testbed.platform)\n",
+    "    d[\"#.\"] = config_id\n",
     "    d[\"Device\"] = testbed.device\n",
+    "    d[\"Platform\"] = platform_str(testbed.platform)\n",
     "    d[\"Driver\"] = driver_str(testbed.driver)\n",
     "    d[\"OpenCL\"] = testbed.opencl\n",
-    "    d[\"Operating system\"] = testbed.host\n",
+    "    d[\"Operating system\"] = host_str(testbed.host)\n",
     "    d[\"Device type\"] = devtype_str(testbed.devtype)\n",
     "    return d\n",
     "\n",
-    "table = pd.DataFrame([get_testbed_info(x[1]) for x in CONFIGURATIONS],\n",
-    "                     index=[x[0] for x in CONFIGURATIONS])\n",
+    "table = pd.DataFrame([get_testbed_info(*x) for x in CONFIGURATIONS])\n",
     "with open(os.path.expanduser(\"~/docs/paper-project_b/build/tab/platforms.tex\"), \"w\") as outfile:\n",
-    "    table.to_latex(buf=outfile)\n",
+    "    table.to_latex(buf=outfile, index=None)\n",
     "!cd ~/docs/paper-project_b/build && git add . && git commit -m \"auto: build/tab/platforms.tex\" && git push\n",
     "table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -497,17 +505,9 @@
      "output_type": "stream",
      "text": [
       "Current branch master is up to date.\n",
-      "[master 08328e4] auto: build/tab/megatable.tex\n",
-      " 1 file changed, 2 insertions(+), 2 deletions(-)\n",
-      "Counting objects: 5, done.\n",
-      "Delta compression using up to 16 threads.\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 445 bytes | 0 bytes/s, done.\n",
-      "Total 5 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3)\u001b[K\u001b[K\n",
-      "remote: Updating references: 100% (1/1)\u001b[K\u001b[K\n",
-      "To https://git.overleaf.com/8608915dsywxshwwjmw\n",
-      "   09554e1..08328e4  master -> master\n"
+      "On branch master\n",
+      "Your branch is up-to-date with 'origin/master'.\n",
+      "nothing to commit, working directory clean\n"
      ]
     }
    ],
