--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -2,7 +2,7 @@
 
 \subsection{Test Case Generation}
 
-Compiler test case generation survey~\cite{Boujarwah1997}. Taming fuzz compilers~\cite{Chen2013}.
+\cec{TODO:} Compiler test case generation survey~\cite{Boujarwah1997}. Taming fuzz compilers~\cite{Chen2013}. Empirical comparion of compiler testing techniques~\cite{Chen2014a}.
 
 \paragraph{SPE} Skeletal program enumeration~\cite{Zhang2016a}. By enumerating all permutations of a skeleton, provides bounded guarantees of compiler correctness. Same problems of CSmith (well formed programs only). No OpenCL implementation. Probably would take a lot of development effort. \cec{More investigation required.}
 
@@ -13,6 +13,8 @@ Developing a random program generator is a huge undertaking, requiring expert kn
 \paragraph{CLgen} Same approach but for benchmark generation. LLVM is used as an oracle to determine if program is well formed. Behaviour is validated using runtime checks, with no desire for correctness \cite{Cummins2017a}. We extend this \cec{\ldots}.
 
 \paragraph{Misc} A mutation-based approach for the Java Virtual Machine is demonstrated in~\cite{Chena}.
+
+Template-based program generation for performance tuning~\cite{Han2017}.
 
 \subsection{ML over programs} 
 
