--- a/sec/overview.tex
+++ b/sec/overview.tex
@@ -1,6 +1,6 @@
 \section{Overview of Our Approach and Results}\label{sec:overview}
 
-We conducted testing using X different OpenCL configurations, summarized in Table~\ref{tab:platforms}. A \emph{configuration} refers to an OpenCL device and driver pair.
+We conducted testing using X different OpenCL configurations, summarized in Table~\ref{tab:platforms}. A \emph{configuration} refers to an OpenCL \emph{<device, driver>} pair.
 
 \input{tab/platforms}
 
