--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -4,7 +4,7 @@
 
 \cec{TODO:} Compiler test case generation survey~\cite{Boujarwah1997}. Taming fuzz compilers~\cite{Chen2013}. Empirical comparion of compiler testing techniques~\cite{Chen2014a}.
 
-\paragraph{SPE} Skeletal program enumeration~\cite{Zhang2016a}. By enumerating all permutations of a skeleton, provides bounded guarantees of compiler correctness. Same problems of CSmith (well formed programs only). No OpenCL implementation. Probably would take a lot of development effort. \cec{More investigation required.}
+\paragraph{SPE} Skeletal program enumeration~\cite{Zhang2016a}. By enumerating entire program space, provides bounded guarantees of compiler correctness. Same shortcoming as CSmith (well formed programs only). No OpenCL implementation. Probably would take a lot of development effort. \cec{More investigation required.}
 
 \paragraph{CSmith} Grammar-based \emph{fuzz testers} have been developed for C~\cite{Yang2011} and OpenCL~\cite{Lidbury2015a}. Both tools require test case reduction (\cite{Regehr2012a} and~\cite{Pflanzer2016}, respectively).
 
