--- a/preamble.tex
+++ b/preamble.tex
@@ -92,43 +92,43 @@ maxbibnames=99       % no 'et-al' condensing author names in biliography
 %% needed for \upgammar
 %\usepackage{upgreek}
 %
-%% Source code listings.
-%\usepackage{listings}
-%\lstset{%
-%  basicstyle=\scriptsize,%
-%  numbers=left,%
-%  xleftmargin=2em,
-%  framexleftmargin=2em,
-%  escapeinside={@|}{|@},
-%  frame=b,%
-%  breaklines=true,%
-%  postbreak=\raisebox{0ex}[0ex][0ex]{\ensuremath{\color{red}\hookrightarrow\space}},%
-%  % red arrow at line breaks
-%  captionpos=b%
-%}
+% Source code listings.
+\usepackage{listings}
+\lstset{%
+  basicstyle=\scriptsize,%
+  numbers=left,%
+  xleftmargin=2em,
+  framexleftmargin=2em,
+  escapeinside={@|}{|@},
+  frame=b,%
+  breaklines=true,%
+  postbreak=\raisebox{0ex}[0ex][0ex]{\ensuremath{\color{red}\hookrightarrow\space}},%
+  % red arrow at line breaks
+  captionpos=b%
+}
+
+% OpenCL listings
 %
-%% OpenCL listings
-%%
-%% From:
-%% http://gpumodeling.blogspot.com/2011/06/opencl-programs-in-latex-listings.html
-%\lstdefinelanguage[OpenCL]{C}[ANSI]{C}
-%{morekeywords={__kernel,kernel,__local,local,__global,global,%
-%    __constant,constant,__private,private,%
-%    char2,char3,char4,char8,char16,%
-%    uchar2,uchar3,uchar4,uchar8,uchar16,%
-%    short2,short3,short4,short8,short16,%
-%    ushort2,ushort3,ushort4,ushort8,ushort16,%
-%    int2,int3,int4,int8,int16,%
-%    uint2,uint3,uint4,uint8,uint16,%
-%    long2,long3,long4,long8,long16,%
-%    ulong2,ulong3,ulong4,ulong8,ulong16,%
-%    float2,float3,float4,float8,float16,%
-%    image2d_t,image3d_t,sampler_t,event_t,size_t,%
-%    bool2,bool3,bool4,bool8,bool16,%
-%    half2,half3,half4,half8,half16,%
-%    quad,quad2,quad3,quad4,quad8,quad16,%
-%    complex,imaginary},%
-%}%
+% From:
+% http://gpumodeling.blogspot.com/2011/06/opencl-programs-in-latex-listings.html
+\lstdefinelanguage[OpenCL]{C}[ANSI]{C}
+{morekeywords={__kernel,kernel,__local,local,__global,global,%
+    __constant,constant,__private,private,%
+    char2,char3,char4,char8,char16,%
+    uchar2,uchar3,uchar4,uchar8,uchar16,%
+    short2,short3,short4,short8,short16,%
+    ushort2,ushort3,ushort4,ushort8,ushort16,%
+    int2,int3,int4,int8,int16,%
+    uint2,uint3,uint4,uint8,uint16,%
+    long2,long3,long4,long8,long16,%
+    ulong2,ulong3,ulong4,ulong8,ulong16,%
+    float2,float3,float4,float8,float16,%
+    image2d_t,image3d_t,sampler_t,event_t,size_t,%
+    bool2,bool3,bool4,bool8,bool16,%
+    half2,half3,half4,half8,half16,%
+    quad,quad2,quad3,quad4,quad8,quad16,%
+    complex,imaginary},%
+}%
 %
 %% Pseudo-code listings.
 %\usepackage{algorithm}
