--- a/sec/overview.tex
+++ b/sec/overview.tex
@@ -4,4 +4,4 @@ We conducted testing using X different OpenCL configurations, summarized in Tabl
 
 \input{tab/platforms}
 
-CLsmith used 21 configurations, covering a range of Xeon Phi. Csmith also used older revisions of compilers, which allowed them to show the decreasing number of bugs in compiler releases. We should do this.
+All configurations yielded bugs. We found and reported X bugs.
