--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -5,3 +5,7 @@ Like-for-like comparison of CLgen and CLSmith. Run the full stack of generation-
 Table~\ref{tab:results}.
 
 \input{tab/results}
+
+\subsection{Test Case Size}
+
+Median CLgen kernel size: 12 lines. Median reduced CLSmith kernel size: 43 lines (894 lines before reduction). Figure~\ref{fig:kernel-sizes}.
