--- a/fig/kernel-sizes.tex
+++ b/fig/kernel-sizes.tex
@@ -1,11 +1,13 @@
 \begin{figure}
   \centering %
   % \subfloat[][AMD Tahiti 7970]{%
-    \includegraphics[width=\columnwidth]{img/kernel-sizes}%
+    \includegraphics[width=\columnwidth]{build/img/kernel-sizes}%
   %  \label{fig:npb-amd}}\\%
   % \subfloat[][NVIDIA GTX 970]{%
   %   \includegraphics[width=\textwidth]{img/ex1-B}%
   %   \label{fig:npb-nvidia}}%
-  \caption{Speedup of programs using \emph{Grewe et al.\ }predictive model with and without synthetic benchmarks. The predictive model outperforms the best static device mapping by a factor of $1.26\times$ on AMD and $2.50\times$ on NVIDIA. The addition of synthetic benchmarks improves the performance to $1.57\times$ on AMD and $3.26\times$ on NVIDIA.}%
+  \caption{%
+  	Length of kernels.%
+  }%
   \label{fig:kernel-sizes} %
 \end{figure}
