--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -9,3 +9,5 @@ Table~\ref{tab:results}.
 \subsection{Test Case Size}
 
 Median CLgen kernel size: 12 lines. Median reduced CLSmith kernel size: 43 lines (894 lines before reduction). Figure~\ref{fig:kernel-sizes}.
+
+\input{fig/kernel-sizes}
