--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -22,7 +22,7 @@ We make the following contributions:
   \includegraphics[width=.9\columnwidth]{img/difftest} %
   % \vspace{-2em}%
   \caption{%
-    Differential testing across a single test case. A test case consists of a program source and runtime parameters. Outcomes are either the output of the program execution, a compiler crash, or a runtime crash.%
+    Differential testing compilers across a single test case. A test case consists of a program source and runtime parameters. Outcomes are either the output of the program execution, a compiler crash, or a runtime crash.%
   }%
   \label{fig:difftest}
 \end{figure}
