--- a/preamble.tex
+++ b/preamble.tex
@@ -69,8 +69,10 @@ maxbibnames=99       % no 'et-al' condensing author names in biliography
 %}
 %
 \usepackage{color}
-\newcommand{\cec}[1]{{\color{red}{\emph{(Chris)} #1}}}
-\newcommand\review[1]{\textcolor{blue}{\emph{(Review)} #1}}
+\newcommand{\cc}[1]{{\color{orange}{\emph{(CC)} #1}}}
+\newcommand{\hl}[1]{{\color{blue}{\emph{(HL)} #1}}}
+\newcommand{\pp}[1]{{\color{cyan}{\emph{(PP)} #1}}}
+\newcommand{\am}[1]{{\color{purple}{\emph{(AM)} #1}}}
 %
 %\usepackage[normalem]{ulem}
 %
