--- a/difftest/Difftest Results.ipynb
+++ b/difftest/Difftest Results.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "11                    76320           84864  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,22 +360,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Counting objects: 25, done\u001b[K\n",
-      "remote: Finding sources: 100% (19/19)\u001b[K\u001b[K\n",
-      "remote: Getting sizes: 100% (10/10)\u001b[K\u001b[K\n",
-      "remote: Total 19 (delta 12), reused 19 (delta 12)\u001b[K\n",
-      "Unpacking objects: 100% (19/19), done.\n",
+      "remote: Counting objects: 13, done\u001b[K\n",
+      "remote: Finding sources: 100% (7/7)\u001b[K\u001b[K\n",
+      "remote: Total 7 (delta 6), reused 7 (delta 6)\u001b[K\n",
+      "Unpacking objects: 100% (7/7), done.\n",
       "From https://git.overleaf.com/8608915dsywxshwwjmw\n",
-      "   7f9e386..9e6b240  master     -> origin/master\n",
+      "   aeb7c83..dc2433e  master     -> origin/master\n",
       "First, rewinding head to replay your work on top of it...\n",
-      "Fast-forwarded master to 9e6b240125d40f9e4c6bbacdb349af76ba4e60f9.\n",
+      "Fast-forwarded master to dc2433edb6ecaeeba9f8f95612ef705c3f55e2a3.\n",
       "On branch master\n",
       "Your branch is up-to-date with 'origin/master'.\n",
       "nothing to commit, working directory clean\n"
@@ -505,7 +504,7 @@
        "7              Oclgrind     16.10    1.2  Ubuntu 16.04 64bit     Emulator  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -560,9 +559,17 @@
      "output_type": "stream",
      "text": [
       "Current branch master is up to date.\n",
-      "On branch master\n",
-      "Your branch is up-to-date with 'origin/master'.\n",
-      "nothing to commit, working directory clean\n"
+      "[master 2b035ea] auto: build/tab/megatable.tex\n",
+      " 1 file changed, 2 insertions(+), 2 deletions(-)\n",
+      "Counting objects: 5, done.\n",
+      "Delta compression using up to 16 threads.\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 495 bytes | 0 bytes/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3)\u001b[K\u001b[K\n",
+      "remote: Updating references: 100% (1/1)\u001b[K\u001b[K\n",
+      "To https://git.overleaf.com/8608915dsywxshwwjmw\n",
+      "   0d6c9d2..2b035ea  master -> master\n"
      ]
     }
    ],
